--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.ts",
   "scripts": {
     "prepare": "husky install",
-    "dev": "ts-node-dev --exit-child src/index.ts",
-    "start": "ts-node src/index.ts",
+    "dev": "NODE_PATH=./src ts-node-dev --exit-child",
+    "start": "NODE_PATH=./src ts-node",
     "lint": "eslint . --config .eslintrc --ext .ts --fix",
     "format": "prettier --write .",
     "pre-commit": "npm run lint && npm run format"
