--- a/package.json
+++ b/package.json
@@ -9,16 +9,21 @@
     "start": "NODE_PATH=./src ts-node",
     "lint": "eslint . --config .eslintrc --ext .ts --fix",
     "format": "prettier --write .",
-    "pre-commit": "npm run lint && npm run format"
+    "pre-commit": "npm run lint && npm run format",
+    "next-dev": "next dev"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.27.2",
-    "dotenv": "^16.0.1"
+    "dotenv": "^16.0.1",
+    "next": "^12.1.6",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0"
   },
   "devDependencies": {
     "@types/node": "^17.0.41",
+    "@types/react": "^18.0.12",
     "@typescript-eslint/eslint-plugin": "^5.27.1",
     "@typescript-eslint/parser": "^5.27.1",
     "eslint": "^8.17.0",
