Absolute path for Controllers

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,7 +29,8 @@
     "paths": {
       "Config/*": ["./config/*"],
       "Constants/*": ["./constants/*"],
-      "Types/*": ["./types/*"]
+      "Types/*": ["./types/*"],
+      "Controllers/*": ["./server/controllers/*"]
     } /* Specify a set of entries that re-map imports to additional lookup locations. */,
     // "rootDirs": [],                                   /* Allow multiple folders to be treated as one when resolving modules. */
     // "typeRoots": [],                                  /* Specify multiple folders that act like './node_modules/@types'. */
@@ -103,6 +104,6 @@
     "isolatedModules": true,
     "jsx": "preserve"
   },
-  "include": ["./src/**/*.ts"],
+  "include": ["./src/**/*.ts", "./src/**/*.tsx"],
   "exclude": ["node_modules, .husky"]
 }
