--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "axios": "^0.27.2",
     "dotenv": "^16.0.1",
+    "moment-timezone": "^0.5.34",
     "next": "^12.1.6",
     "react": "^18.1.0",
     "react-dom": "^18.1.0"
