--- a/package.json
+++ b/package.json
@@ -4,13 +4,11 @@
   "description": "A client to access your Fab account.",
   "main": "index.ts",
   "scripts": {
+    "start": "next dev",
     "prepare": "husky install",
-    "dev": "NODE_PATH=./src ts-node-dev --exit-child",
-    "start": "NODE_PATH=./src ts-node",
     "lint": "eslint . --config .eslintrc --ext .ts --fix",
     "format": "prettier --write .",
-    "pre-commit": "npm run lint && npm run format",
-    "next-dev": "next dev"
+    "pre-commit": "npm run lint && npm run format"
   },
   "author": "",
   "license": "ISC",
