--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,7 +32,7 @@
       "Types/*": ["./types/*"],
       "Controllers/*": ["./server/controllers/*"],
       "Components/*": ["./client/components/*"],
-      "Styles/*": ["./client/styles/*"]
+      "Client/*": ["./client/*"]
     } /* Specify a set of entries that re-map imports to additional lookup locations. */,
     // "rootDirs": [],                                   /* Allow multiple folders to be treated as one when resolving modules. */
     // "typeRoots": [],                                  /* Specify multiple folders that act like './node_modules/@types'. */
