Move logging to services

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,7 +32,8 @@
       "Types/*": ["./types/*"],
       "Controllers/*": ["./server/controllers/*"],
       "Components/*": ["./client/components/*"],
-      "Client/*": ["./client/*"]
+      "Client/*": ["./client/*"],
+      "Server/*": ["./server/*"]
     } /* Specify a set of entries that re-map imports to additional lookup locations. */,
     // "rootDirs": [],                                   /* Allow multiple folders to be treated as one when resolving modules. */
     // "typeRoots": [],                                  /* Specify multiple folders that act like './node_modules/@types'. */
