--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "axios": "^0.27.2",
     "dotenv": "^16.0.1",
+    "iron-session": "^6.1.3",
     "moment-timezone": "^0.5.34",
     "next": "^12.1.6",
     "react": "^18.1.0",
