--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "iron-session": "^6.1.3",
     "moment-timezone": "^0.5.34",
     "next": "^12.1.6",
+    "nextjs-progressbar": "^0.0.14",
     "react": "^18.1.0",
     "react-dom": "^18.1.0"
   },
