--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,13 +27,11 @@
     "moduleResolution": "node" /* Specify how TypeScript looks up a file from a given module specifier. */,
     "baseUrl": "./src" /* Specify the base directory to resolve non-relative module names. */,
     "paths": {
-      "Config/*": ["./config/*"],
-      "Constants/*": ["./constants/*"],
-      "Types/*": ["./types/*"],
-      "Controllers/*": ["./server/controllers/*"],
-      "Components/*": ["./client/components/*"],
-      "Client/*": ["./client/*"],
-      "Server/*": ["./server/*"]
+      "config/*": ["./config/*"],
+      "constants/*": ["./constants/*"],
+      "types/*": ["./types/*"],
+      "client/*": ["./client/*"],
+      "server/*": ["./server/*"]
     } /* Specify a set of entries that re-map imports to additional lookup locations. */,
     // "rootDirs": [],                                   /* Allow multiple folders to be treated as one when resolving modules. */
     // "typeRoots": [],                                  /* Specify multiple folders that act like './node_modules/@types'. */
