--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.ts",
   "scripts": {
     "start": "next dev",
+    "test": "jest --watch",
     "prepare": "husky install",
     "lint": "eslint . --config .eslintrc --ext .ts --fix",
     "format": "prettier --write .",
@@ -23,6 +24,9 @@
     "react-dom": "^18.1.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.3.0",
+    "@types/jest": "^28.1.4",
     "@types/node": "^17.0.41",
     "@types/react": "^18.0.12",
     "@typescript-eslint/eslint-plugin": "^5.27.1",
@@ -31,6 +35,8 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
     "husky": "^8.0.1",
+    "jest": "^28.1.2",
+    "jest-environment-jsdom": "^28.1.2",
     "lint-staged": "^13.0.1",
     "prettier": "^2.6.2",
     "ts-node": "^10.8.1",
