--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "jest": "^28.1.2",
     "jest-environment-jsdom": "^28.1.2",
     "lint-staged": "^13.0.1",
+    "msw": "^0.42.3",
     "prettier": "^2.6.2",
     "ts-node": "^10.8.1",
     "ts-node-dev": "^2.0.0",
