Use mocks alias

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,7 +31,8 @@
       "constants/*": ["./constants/*"],
       "types/*": ["./types/*"],
       "client/*": ["./client/*"],
-      "server/*": ["./server/*"]
+      "server/*": ["./server/*"],
+      "mocks/*": ["./mocks/*"]
     } /* Specify a set of entries that re-map imports to additional lookup locations. */,
     // "rootDirs": [],                                   /* Allow multiple folders to be treated as one when resolving modules. */
     // "typeRoots": [],                                  /* Specify multiple folders that act like './node_modules/@types'. */
