--- a/.eslintrc
+++ b/.eslintrc
@@ -12,6 +12,7 @@
     "object-curly-spacing": ["error", "never"],
     "array-bracket-spacing": ["error", "never"],
     "quotes": ["error", "double"],
-    "semi": ["error", "always"]
+    "semi": ["error", "always"],
+    "no-console": ["error"]
   }
 }
