--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "lint-staged": "^13.0.1",
     "msw": "^0.42.3",
     "prettier": "^2.6.2",
+    "ts-jest": "^28.0.5",
     "ts-node": "^10.8.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.7.3"
