--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.ts",
   "scripts": {
     "start": "next dev",
-    "test": "jest --watch",
+    "test": "NEXT_PUBLIC_ENVIRONMENT=test jest --watch",
     "test-coverage": "jest --coverage --collectCoverageFrom='./src/**'",
     "prepare": "husky install",
     "lint": "eslint . --config .eslintrc --ext .ts --fix",
