--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "next dev",
     "test": "NEXT_PUBLIC_ENVIRONMENT=test jest --watch",
-    "test-coverage": "jest --coverage --collectCoverageFrom='./src/**'",
+    "test-coverage": "NEXT_PUBLIC_ENVIRONMENT=test jest --coverage --collectCoverageFrom='./src/**'",
     "prepare": "husky install",
     "lint": "eslint . --config .eslintrc --ext .ts --fix",
     "format": "prettier --write .",
