Setup prod build

--- a/.env.development.example
+++ b/.env.development.example
@@ -1,4 +1,4 @@
-# in the root directory, create a file called .env.local and add these variables:
+# in the root directory, create a file called .env.development and add these variables:
 
 NEXT_PUBLIC_ENVIRONMENT=development
 NEXT_PUBLIC_ACCESS_TOKEN=your-accesstoken
